# hydronium_ion_life_v_2

./: CMakeLists.txt  README.md  main.cpp  parc_and_analis.cpp  parc_and_analis.h
analyzer/: CMakeLists.txt  main.cpp  parc_and_analis.cpp  parc_and_analis.h
analyzer/classes_for_water/: H_atom.cpp
classes_for_water/: Atom.cpp  Atom.h  H_atom.cpp  H_atom.h  O_atom.cpp  O_atom.h
make_statistic/: Hist.ipynb  res_life.txt
make_statistic/.ipynb_checkpoints/: Hist-checkpoint.ipynb  res-checkpoint.csv
visualization_of_water_modeling/: vis_mod.txt  visualization_model_of_water_dynamic.ipynb
visualization_of_water_modeling/.ipynb_checkpoints/: vis_mod-checkpoint.txt
